production/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app.production.io
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: my-backend-service
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: my-frontend-service
                port:
                  number: 80
